--- a/main.tex
+++ b/main.tex
@@ -180,14 +180,20 @@ We can map between a k-surface and its boundary, if it exists, with the \textbf{
 
 We began our discussion of manifolds by assigning real number values to individual points on a more abstract space. This related to the determination of physical cases, given some set of possibilities, and we were able to define coordinate systems. We will now be extending that process to arbitrary submanifolds, such that we will be able to assign real numbers to lines, areas, bodies, etc., corresponding to some physical property of that object. This may sound much more abstract than it actually is. In reality, all that we are doing here is quantifying and mathematically formalizing scientific investigation with as few tools as possible. 
 
-For example, consider a topographic map of the Earth (a map distinguishing elevations), which we will denote by $M$. A coordinate system $Q: U \subset M \to \mathbb{R}$ will therefore take into account not only lateral and longitudinal positions, as in the geography example before, but also elevation. Now, let's place a baseball on this topographic map, and allow it to roll freely under the force of gravity and (in general) resisted by friction. Call the baseball's path $\lambda$. $\lambda$ is simply a 1-surface on $M$. As the baseball travels along $\lambda$, we can determine the work done on the baseball by gravity and friction. Denote the work done on the baseball as $W: S^1 \to \mathbb{R}$, such that $W(\lambda)$ is the work done on the baseball along $\lambda$. Specify now three points along $\lambda$: $a, b,$ and $c$, such that $a \in \lambda$ is the starting point of the path, $c \in \lambda$ is the ending point of the path, and $b$ is some point between them. We can say, therefore, that \begin{gather} W(\lambda_{a\to c}) = W(\lambda_{a \to b}) + W(\lambda_{b \to c}).\end{gather} [\textbf{Insert a tikz picture here}]
+
+\textbf{Show in this paragraph how this is the scientific investigation}
+For example, consider a topographic map of the Earth (a map distinguishing elevations), which we will denote by $M$. A coordinate system $Q: U \subset M \to \mathbb{R}$ will therefore take into account not only lateral and longitudinal positions, as in the geography example before, but also elevation. Now, let's place a baseball on this topographic map, and allow it to roll freely under the force of gravity and (in general) resisted by friction. Call the baseball's path $\lambda$. $\lambda$ is simply a 1-surface on $M$. As the baseball travels along $\lambda$, we can determine the work done on the baseball by gravity and friction. 
+
+Denote the work done on the baseball as $W: S^1 \to \mathbb{R}$, such that $W(\lambda)$ is the work done on the baseball along $\lambda$. Specify now three points along $\lambda$: $a, b,$ and $c$, such that $a \in \lambda$ is the starting point of the path, $c \in \lambda$ is the ending point of the path, and $b$ is some point between them. {\textbf{Capitalize the points}} We can say, therefore, that \begin{gather} W(\lambda_{a\to c}) = W(\lambda_{a \to b}) + W(\lambda_{b \to c}).\end{gather} [\textbf{Insert a tikz picture here}]
 That is, we can say that the work done over the entire path is equal to the work done over one portion of the path plus the work done over the rest of the path. It follows, therefore, that we can break up the path into as many finite paths as we want, determine the work on each of them, and sum them to get the overall work. In other words, \begin{gather} W(\lambda) = \sum_{i=1}^{n} W(\lambda_i) \end{gather} for a line split into $n$ pieces (not necessarily equally large). We require, however, that the ends are stuck exactly end-to-end (that is, the components overlap on their boundaries). The function $W$ is therefore linear. We call such a function a 1-functional, or a linear functional over 1-surfaces. 
 
 As another example, consider a surface $\sigma$, and a function $\Phi: S^2 \to \mathbb{R}$ that determines magnetic flux, such that $\Phi(\sigma)$ is the magnetic flux through $\sigma$. Similarly to in the case with $\lambda$, we may break up $\sigma$ into finite constituent pieces, attached side-to-side. We therefore have that \begin{gather} \Phi(\sigma) = \sum_{i=1}^n \Phi(\sigma_i) \end{gather} for $\sigma$ broken up into $n$ different pieces, requiring once again that the pieces are stuck exactly side-to-side. We call $\Phi$ a 2-functional, or a linear function over 2-surfaces. 
 
 This sort of linear functions over objects extends to the general kth case. We define therefore \textbf{k-functionals} $f_k : S^k \to \mathbb{R}$ as linear functionals over k-surfaces, meaning that such a functional applied over the entire k-surface is equivalent to applying the functional to component pieces of the k-surface and summing the contributions, as long as the components overlap only on their boundaries. 
 
-One more specification is necessary: the fact that $f_k$ must commute with the limit. Consider a straight line $\lambda$ with components in $x$ and $y$. The length $L$ of $\lambda$ is thus $L = \sqrt(x^2 + y^2)$. This is emphatically \emph{not} the same as the sum of the lengths of each of the components, which would be $|x| + |y|$. In other words, the length of the limit is not the limit of the length, and a length function $\sqrt(x^2 + y^2)$ is not a linear functional. This is in some sense a continuation of the argument made at the very end of section 1.1, where we stated that we are not, in general, working on manifolds that contain an inborn notion of length. The greater importance of this lies in the fact that we can continue to develop our mathematical structure for physical investigation without imposing any further assumptions. These tools continue to work in general, being just as valid for working in phase space, on a topographic map, or on a map of the earth, etc. 
+\textbf{Say first the requirements, and then the definition. Introduce first the limit in the abstract (we have a sequence of shapes and in the limit they become something). We want that the limit on the sequence is the limit applied to the numbers. Then say that not all things are like that, like length}
+
+One more specification is necessary: the fact that $f_k$ must commute with the limit. Consider a straight line $\lambda$ with components in $x$ and $y$. The length $L$ of $\lambda$ is thus $L = \sqrt{x^2 + y^2}$. This is emphatically \emph{not} the same as the sum of the lengths of each of the components, which would be $|x| + |y|$. In other words, the length of the limit is not the limit of the length, and a length function $\sqrt(x^2 + y^2)$ is not a linear functional.[\textbf{We have a line, the diagonal. Create a secquence of horiz and verti lines whose limit is the diagonal. We want the funtional to commute the limit. Meaning that the functional applied to the limit is the same as the limit applied to the sequence of functional.}] This is in some sense a continuation of the argument made at the very end of section 1.1, where we stated that we are not, in general, working on manifolds that contain an inborn notion of length. The greater importance of this lies in the fact that we can continue to develop our mathematical structure for physical investigation without imposing any further assumptions (\textbf{this little bit could probably better go somewhere else, like in the introduction, or maybe when we introduce k-functionals}). These tools continue to work in general, being just as valid for working in phase space, on a topographic map, or on a map of the earth, etc. 
 
 
 
@@ -207,15 +213,19 @@ One more specification is necessary: the fact that $f_k$ must commute with the l
 	$F_k$ is the set of all functionals of dimension k, and $F = \cup_{k=0}^nF_k$ is the set of all functionals. 
 \end{defn}
 
-Let's return now to the work example. Suppose we have a closed line $\lambda$; that is, its starting point and ending point are the same, or equivalently, it has no boundary ($\partial\lambda = \emptyset$). $W(\lambda)$ will in general have some nonzero value. In other words, a particle confined to $\lambda$ will have work done on it by (for instance) gravity, drag, or other such forces. However, if the particle remains motionless, the work done on the particle will be zero. 
+\textbf{We have functionals, the functional on the empty set is always zero. Oh look, how we have the boundary functional. We have exact functionals. It's exact if zero for all closed surfaces.}
 
-Let us impose now one further condition: we will only allow conservative forces such as gravitational force to act on the particle. Therefore, there's no drag, friction, etc. Physically, this means that the work done by the force on the particle will be path independent. In other words, if we have a closed path $\lambda$ and a work function $W$ defined with a conservative force, we have that \begin{gather} W(\lambda) = 0. \end{gather} Notice that this condition is in effect equivalent to the condition that the particle remains motionless, or that the particle remains confined to the boundary of the line. We noted, however, that because $\lambda$ is closed, the boundary $\partial\lambda$ is empty. We have, therefore, that \begin{gather} W(\lambda) = U(\partial\lambda) = U(\emptyset) = 0, \end{gather} defining $U : S^0 \to \mathbb{R}$ such that \begin{gather}W(\lambda) = U(\partial\lambda),\end{gather} recalling that the boundary operator reduces the rank of a surface by one. 
+\textbf{What's 1/2 of the boundary? The boundary of a line is two points, not one. Of a surface, two lines, not one.}
+
+Let's return now to the work example. Suppose we have a closed line $\lambda$; that is, its starting point and ending point are the same, or equivalently, it has no boundary ($\partial\lambda = \emptyset$). $W(\lambda)$ will in general have some nonzero value. In other words, a particle confined to $\lambda$ will have work done on it by (for instance) gravity, drag, or other such forces. However, if the particle remains motionless, the work done on the particle will be zero. [\textbf{If it remains motionless, the path is a point, no longer a path. What's important here is that the work done on an empty path or single point is going to be zero. Say prop 1.25 probably around here.}]
+
+Let us impose now one further condition: we will only allow conservative forces such as gravitational force to act on the particle. Therefore, there's no drag, friction, etc. Physically, this means that the work done by the force on the particle will be path independent. In other words, if we have a closed path $\lambda$ and a work function $W$ defined with a conservative force, we have that \begin{gather} W(\lambda) = 0. \end{gather} Notice that this condition is in effect equivalent to the condition that the particle remains motionless, or that the particle remains confined to the boundary of the line ([\textbf{This isn't good, it's giving a new path. Don't say it's equivalent. All we have is that is that the work is zero, which is the same as the work of the empty set}]). We noted, however, that because $\lambda$ is closed, the boundary $\partial\lambda$ is empty. We have, therefore, that \begin{gather} W(\lambda) = U(\partial\lambda) = U(\emptyset) = 0, \end{gather} defining $U : S^0 \to \mathbb{R}$ such that \begin{gather}W(\lambda) = U(\partial\lambda),\end{gather} recalling that the boundary operator reduces the rank of a surface by one. 
 
 This relation between $W$ and $U$ is not at all trivial, and is of fundamental importance to our mathematical description of path independent work. We have that $U$ is a 0-functional (or scalar functional), and note that in the case of path independence, we have that a one-functional over a one-surface is equivalent to a zero-functional over the boundary of that same one-surface. To make clear the importance of this, we can neglect even to talk about $W$ itself, instead speaking only in terms of $U$. To that end, we propose the boundary functional $\eth : F_k \to F_{k+1}$ as the tool that links together $W$ and $U$. 
 
 
 
-
+[\textbf{Define the boundary functional earlier. Given a function, we can use the boundary functional to apply that function to the boundary of a higher dimensional surface. We can always do this. THEN show that applying $\eth$ twice gives the zero functional.}]
 
 \begin{defn}
 	$\eth : F_k \to F_{k+1}$ such that $\eth f_k(\sigma^{k+1}) = f_k(\partial \sigma^{k+1})$ is the \textbf{boundary functional} on k-functionals. 
