--- a/main.tex
+++ b/main.tex
@@ -173,7 +173,7 @@ We can map between a k-surface and its boundary, if it exists, with the \textbf{
 \section{Linear Functionals of K-surfaces}
 
 
-\textbf{Important idea i sthat we're giving a shape a number. The fact that we can do all these things without defining tangent space and such is the important stuff.}
+
 
 
 
@@ -181,21 +181,18 @@ We can map between a k-surface and its boundary, if it exists, with the \textbf{
 We began our discussion of manifolds by assigning real number values to individual points on a more abstract space. This related to the determination of physical cases, given some set of possibilities, and we were able to define coordinate systems. We will now be extending that process to arbitrary submanifolds, such that we will be able to assign real numbers to lines, areas, bodies, etc., corresponding to some physical property of that object. This may sound much more abstract than it actually is. In reality, all that we are doing here is quantifying and mathematically formalizing scientific investigation with as few tools as possible. 
 
 
-\textbf{Show in this paragraph how this is the scientific investigation}
-For example, consider a topographic map of the Earth (a map distinguishing elevations), which we will denote by $M$. A coordinate system $Q: U \subset M \to \mathbb{R}$ will therefore take into account not only lateral and longitudinal positions, as in the geography example before, but also elevation. Now, let's place a baseball on this topographic map, and allow it to roll freely under the force of gravity and (in general) resisted by friction. Call the baseball's path $\lambda$. $\lambda$ is simply a 1-surface on $M$. As the baseball travels along $\lambda$, we can determine the work done on the baseball by gravity and friction. 
+ The greater importance of what we are doing here lies in the fact that we are developing our mathematical structure for physical investigation while imposing as few assumptions as possible. We want our tools to work as generally as possible, being just as valid for working in phase space, or on a map of the earth. For example, consider a topographic map of the Earth (a map distinguishing elevations), which we will denote by $M$. A coordinate system $Q: U \subset M \to \mathbb{R}$ will therefore take into account not only lateral and longitudinal positions, as in the geography example before, but also elevation. Now, let's place a baseball on this topographic map, and allow it to roll freely under the force of gravity and (in general) resisted by friction. Call the baseball's path $\lambda$. $\lambda$ is simply a 1-surface on $M$. As the baseball travels along $\lambda$, we can determine the work done on the baseball by gravity and friction. 
 
-Denote the work done on the baseball as $W: S^1 \to \mathbb{R}$, such that $W(\lambda)$ is the work done on the baseball along $\lambda$. Specify now three points along $\lambda$: $a, b,$ and $c$, such that $a \in \lambda$ is the starting point of the path, $c \in \lambda$ is the ending point of the path, and $b$ is some point between them. {\textbf{Capitalize the points}} We can say, therefore, that \begin{gather} W(\lambda_{a\to c}) = W(\lambda_{a \to b}) + W(\lambda_{b \to c}).\end{gather} [\textbf{Insert a tikz picture here}]
+Denote the work done on the baseball as $W: S^1 \to \mathbb{R}$, such that $W(\lambda)$ is the work done on the baseball along $\lambda$. Specify now three points along $\lambda$: $A, B,$ and $C$, such that $A \in \lambda$ is the starting point of the path, $C \in \lambda$ is the ending point of the path, and $B$ is some point between them. We can say, therefore, that \begin{gather} W(\lambda_{A\to C}) = W(\lambda_{A \to B}) + W(\lambda_{B \to C}).\end{gather} [\textbf{Insert a tikz picture here}]
 That is, we can say that the work done over the entire path is equal to the work done over one portion of the path plus the work done over the rest of the path. It follows, therefore, that we can break up the path into as many finite paths as we want, determine the work on each of them, and sum them to get the overall work. In other words, \begin{gather} W(\lambda) = \sum_{i=1}^{n} W(\lambda_i) \end{gather} for a line split into $n$ pieces (not necessarily equally large). We require, however, that the ends are stuck exactly end-to-end (that is, the components overlap on their boundaries). The function $W$ is therefore linear. We call such a function a 1-functional, or a linear functional over 1-surfaces. 
 
 As another example, consider a surface $\sigma$, and a function $\Phi: S^2 \to \mathbb{R}$ that determines magnetic flux, such that $\Phi(\sigma)$ is the magnetic flux through $\sigma$. Similarly to in the case with $\lambda$, we may break up $\sigma$ into finite constituent pieces, attached side-to-side. We therefore have that \begin{gather} \Phi(\sigma) = \sum_{i=1}^n \Phi(\sigma_i) \end{gather} for $\sigma$ broken up into $n$ different pieces, requiring once again that the pieces are stuck exactly side-to-side. We call $\Phi$ a 2-functional, or a linear function over 2-surfaces. 
 
 This sort of linear functions over objects extends to the general kth case. We define therefore \textbf{k-functionals} $f_k : S^k \to \mathbb{R}$ as linear functionals over k-surfaces, meaning that such a functional applied over the entire k-surface is equivalent to applying the functional to component pieces of the k-surface and summing the contributions, as long as the components overlap only on their boundaries. 
 
-\textbf{Say first the requirements, and then the definition. Introduce first the limit in the abstract (we have a sequence of shapes and in the limit they become something). We want that the limit on the sequence is the limit applied to the numbers. Then say that not all things are like that, like length}
-
-One more specification is necessary: the fact that $f_k$ must commute with the limit. Consider a straight line $\lambda$ with components in $x$ and $y$. The length $L$ of $\lambda$ is thus $L = \sqrt{x^2 + y^2}$. This is emphatically \emph{not} the same as the sum of the lengths of each of the components, which would be $|x| + |y|$. In other words, the length of the limit is not the limit of the length, and a length function $\sqrt(x^2 + y^2)$ is not a linear functional.[\textbf{We have a line, the diagonal. Create a secquence of horiz and verti lines whose limit is the diagonal. We want the funtional to commute the limit. Meaning that the functional applied to the limit is the same as the limit applied to the sequence of functional.}] This is in some sense a continuation of the argument made at the very end of section 1.1, where we stated that we are not, in general, working on manifolds that contain an inborn notion of length. The greater importance of this lies in the fact that we can continue to develop our mathematical structure for physical investigation without imposing any further assumptions (\textbf{this little bit could probably better go somewhere else, like in the introduction, or maybe when we introduce k-functionals}). These tools continue to work in general, being just as valid for working in phase space, on a topographic map, or on a map of the earth, etc. 
 
 
+One more specification is necessary: the fact that $f_k$ must commute with the limit. Suppose we have a sequence of k-surfaces stuck end-to-end. We can apply a k-functional to that sequence as a whole, or sum the contributions of the k-functional on each surface of that sequence, and we will get the same result. Consider now the limit of that sequence as the components get smaller and smaller. The sequence in this limit will approach another k-surface. The key word here is "approach." We require that the k-functional applied to the limit of the sequence of k-surfaces is the same as the k-functional applied to the k-surface that they are approaching. To give an example where this condition is not fulfilled, suppose we have a sequence of horizontal and vertical lines (1-surfaces). In the limit of this sequence, these horizontal and vertical lines will approach a single line, which we will call $\lambda$, which will have both horizontal and vertical components. We ask ourselves now whether a length functional $L$, such that $L(\lambda)$ is the length of $\lambda$, is a 1-functional. It is certainly true that we can break $\lambda$ up into smaller lines stuck end-to-end, thus preserving linearity. However, this length functional does not satisfy the requirement that the length of the limit of the sequence of horizontal lines approaching $\lambda$ is the same as the length of $\lambda$. In other words, the length of the limit is not the limit of the length, and a length function is not a linear functional. The implications of this can actually be seen in the coastline paradox [\textbf{get citation for this}]. Furthermore, this example is in effect a continuation of the argument made at the very end of section 1.1, where we stated that we are not, in general, working on manifolds that contain an inborn notion of length.
 
 
 
